fixing documentation/urls; adding stricter check for enabled gelf support

--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,54 @@
 {
-    "name": "renepardon/gelf-support",
-    "type": "library",
-    "description": "A composer compliant package to support GELF logging within laravel/symfony projects",
-    "keywords": [
-        "renepardon",
-        "gelfsupport",
-        "laravel",
-        "symfony"
-    ],
-    "homepage": "https://github.com/renepardon/GelfSupport",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Christoph, René Pardon",
-            "email": "rene.pardon@boonweb.de",
-            "homepage": "http://www.renepardon.de",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "~7.0",
-        "graylog2/gelf-php": "^1.5",
-        "illuminate/contracts": "^5.4",
-        "illuminate/support": "~5.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit" : "~5.0||~6.0",
-        "squizlabs/php_codesniffer": "^2.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "RenePardon\\GelfSupport\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "RenePardon\\GelfSupport\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
+  "name": "renepardon/gelf-support",
+  "type": "library",
+  "description": "A composer compliant package to support GELF logging within laravel/symfony projects",
+  "keywords": [
+    "renepardon",
+    "gelf-support",
+    "laravel",
+    "symfony"
+  ],
+  "homepage": "https://github.com/renepardon/gelf-support",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Christoph, René Pardon",
+      "email": "rene.pardon@boonweb.de",
+      "homepage": "http://www.renepardon.de",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": "~7.0",
+    "graylog2/gelf-php": "^1.5",
+    "illuminate/contracts": "^5.4",
+    "illuminate/support": "~5.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5.0||~6.0",
+    "squizlabs/php_codesniffer": "^2.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "RenePardon\\GelfSupport\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "RenePardon\\GelfSupport\\": "tests"
+    }
+  },
+  "scripts": {
+    "test": "phpunit",
+    "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  }
 }
